@@ -9447,4 +9447,15 @@ No match
     A8B9C
  0: A8B9C
 
+/(?1)()((((((\1++))\x85)+)|))/
+    \x85\x85
+ 0: \x85\x85
+ 1: 
+ 2: \x85\x85
+ 3: \x85\x85
+ 4: \x85\x85
+ 5: \x85
+ 6: 
+ 7: 
+
 # End of testinput1 
